# pytask-environment

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGES.md  CHANGES.rst  MANIFEST.in  README.md  README.rst  codecov.yml  environment.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.conda/: meta.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
.github/workflows/: continuous-integration-workflow.yml  main.yml
src/pytask_environment/: __init__.py  _version.py  collect.py  config.py  database.py  logging.py  plugin.py
tests/: test_collect.py  test_logging.py
