[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"


[tool.setuptools_scm]
write_to = "src/pytask_environment/_version.py"


[tool.codespell]
ignore-words-list = "falsy"


[tool.ruff]
select = ["ALL"]
fix = true
extend-ignore = [
    # Numpy docstyle
    "D107",
    "D203",
    "D212",
    "D213",
    "D402",
    "D404",
    "D413",
    "D415",
    "D416",
    "D417",
    # Others.
    "RET504",  # unnecessary variable assignment before return.
    "S101",  # raise errors for asserts.
    "B905",  # strict parameter for zip that was implemented in py310.
    "I",  # ignore isort
    "ANN101",  # type annotating self
    "ANN102",  # type annotating cls
    "FBT",  # flake8-boolean-trap
    "EM",  # flake8-errmsg
    "ANN401",  # flake8-annotate typing.Any
    "PD",  # pandas-vet
    "UP",  # pyupgrade is too aggressive for py<3.10
]


[tool.ruff.per-file-ignores]
"tests/*" = ["D", "ANN"]
