[metadata]
name = pytask_environment
description = Detect changes in your pytask environment and abort a project build.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pytask-dev/pytask-environment
author = Tobias Raabe
author_email = raabe@posteo.de
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Changelog = https://github.com/pytask-dev/pytask-environment/blob/main/CHANGES.md
    Documentation = https://github.com/pytask-dev/pytask-environment
    Github = https://github.com/pytask-dev/pytask-environment
    Tracker = https://github.com/pytask-dev/pytask-environment/issues

[options]
packages = find:
install_requires =
    click
    pony
    pytask>=0.2
python_requires = >=3.7
include_package_data = True
package_dir = =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
pytask =
    pytask_environment = pytask_environment.plugin

[check-manifest]
ignore =
    src/pytask_environment/_version.py
